k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ##application-name##
  namespace: ##namespace##
spec:
  selector:
    app: ##application-name##
  ports:
  - name: external
    port: 80
    protocol: TCP
    targetPort: web
