k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ##application-name##
  namespace: ##namespace##
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: ##/application-name##
        backend:
          serviceName: ##application-name##
          servicePort: external
